<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of GNU Taler
  ~ (C) 2020 Taler Systems S.A.
  ~
  ~ GNU Taler is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3, or (at your option) any later version.
  ~
  ~ GNU Taler is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
  ~ A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ GNU Taler; see the file COPYING.  If not, see <http://www.gnu.org/licenses/>
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".refund.RefundFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/refund_amount"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:endIconTint="?attr/colorControlNormal"
        app:layout_constraintBottom_toTopOf="@+id/reasonView"
        app:layout_constraintEnd_toStartOf="@+id/currencyView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="6"
            android:inputType="numberDecimal"
            tools:text="23.42" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/currencyView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="start|center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/amountView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountView"
        app:layout_constraintTop_toTopOf="@+id/amountView"
        tools:text="TESTKUDOS" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reasonView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/refund_reason"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/abortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reasonInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete|textAutoCorrect|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/abortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/refund_abort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/refundButton"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/refundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/refund_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/abortButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/refundButton"
        app:layout_constraintEnd_toEndOf="@+id/refundButton"
        app:layout_constraintStart_toStartOf="@+id/refundButton"
        app:layout_constraintTop_toTopOf="@+id/refundButton"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
